--- a/Web.config
+++ b/Web.config
@@ -5,7 +5,7 @@
 -->
 <configuration>
 	<connectionStrings>
-  <add name="dc_DatabaseConnectionString" connectionString="Data Source=localhost;Initial Catalog=dc_Database;User ID=sa;Password=123"
+  <add name="dc_DatabaseConnectionString" connectionString="Data Source=localhost;Initial Catalog=dc_Database;User ID=sa;Password=06dor5U5"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
  <system.web>
