--- a/Web.config
+++ b/Web.config
@@ -1,40 +1,23 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   https://go.microsoft.com/fwlink/?LinkId=169433
 -->
 <configuration>
-  <appSettings>
-    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
-  </appSettings>
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <handlers>
-      <remove name="ChartImageHandler" />
-      <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST"
-        path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-    </handlers>
-  </system.webServer>
+  
   <connectionStrings>
-    <add name="dc_DatabaseConnectionString" connectionString="Data Source=localhost;Initial Catalog=dc_Database;User ID=sa;Password=06dor5U5" providerName="System.Data.SqlClient"/>
+    <add name="dc_DatabaseConnectionString" connectionString="Data Source=localhost;Initial Catalog=dc_Database;User ID=sa;Password=06dor5U5" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    
+    <!-- 避免检测到有潜在危险的 Request.Form 值。 -->
     <httpRuntime requestValidationMode="2.0" />
-    <httpHandlers>
-      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        validate="false" />
-    </httpHandlers>
-    <pages>
-      <controls>
-        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
-          assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      </controls>
-    </pages>
+    <!-- 避免存在潜在的危险 -->
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
-        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-        <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
       </assemblies>
     </compilation>
+    
   </system.web>
 </configuration>
